# multi-template

./: .gitignore  Cargo.toml
src/: args.rs  main.rs  structs.rs
